k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  ingressClassName: nginx

  rules:
    - host: app.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9090

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80 

          - path: /discovery
            pathType: Prefix
            backend:
              service:
                name: discovery-service
                port:
                  number: 8761

    - host: sonar.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
